     as they are also a kind of already running games
   * Made era not required while loading save game
   * Removed bogus client commands about takeing side
   * Fixed control change when giving own team (bug #6639)
 * User interface
   * During dialogs the speaker is shown in the sidebar and highlighted.
   * During ai moves the source hex is no longer highlighted.
 * miscellaneous and bug fixes:
   * Moved destruction of conditional object before the mutex. This should 
     fix random crash in network disconnect.
   * Fixed reference to invalid pointer in attack::attack
   * pressing shift affects acceleration immediately
   * More gcc 4.3 fixed
   * Hide race sections having only units with "hide_help=true"
   * Optimize roads placing of random map
   * when a unit miss an animation, the engine will base the replacement on
     the standing animation instead of the standing frame

Version 1.3.15:
 * language and i18n:
   * updated translations: Catalan, Chinese, Czech, Danish, Dutch, French,
     German, Hungarian, Italian, Lithuanian, Polish, Spanish, Turkish
   * updated DejaVuSans to 2.23
 * graphics:
   * new elvish portraits by Kitty
 * multiplayer:
   * revised maps: Cynsaun Battlefield
   * fixed bug #10777: Cannot cancel a multiplayer password prompt
   * fixed bug #10779: Rejoining game causes major problems
   * Fixed :control command to work
   * Fixed control change not to set wrong team if we are playing now
   * damage statistics for the current turn also works for observers now
   * MP loads now era_id from save file (bug #10878)
   * skip replay no longer skips the story for players only for observers
     (bug #9538)
   * observers without the addon installed can watch the second scenario of
     a MP campaign again (bug #10794)
 * user interface:
   * Made ESC clear hotkey when changing hotkeys
   * Made quick replay skip messages
   * linger mode overlay is also drawn over fog and shroud (bug #10811)